# DeepResearch

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start.sh
api/: routes_export.py  routes_research.py  routes_sources.py  routes_tasks.py
app/: main.py
config/: crawling_policy.yaml  llm_tasks.yaml  providers.yaml  research_policy.yaml  search_policy.yaml  source_rules.yaml  vault.yaml
core/: config.py  errors.py  logging.py
db/: migrate.py  repositories.py  session.py  tables.py
models/: __init__.py  enums.py  schemas.py
scripts/: test_ollama_connection.py
services/: auto_fetch_service.py  book_relevance_service.py  card_export_service.py  dedupe_service.py  extraction_service.py  markdown_service.py  query_expansion_service.py  research_card_service.py  research_service.py  result_classification_service.py  scoring_service.py  search_router.py  task_event_service.py  task_queue_service.py
templates/: research_index.md.j2  source_note.md.j2
tests/: conftest.py  conftest_db.py  test_ai_gateway.py  test_ai_parser.py  test_ai_schemas.py  test_api.py  test_auto_export_obsidian.py  test_auto_fetch_and_export_flow.py  test_auto_fetch_policy.py  test_auto_synthesis_flow.py  test_book_relevance_filter.py  test_brave_provider.py  test_card_export.py  test_classification.py  test_config.py  test_content_normalization.py  test_content_normalization_policy.py  test_crawlee_relevance_filter.py  test_crawlee_service.py  test_crawler_routes.py  test_cross_source_deduplication.py  test_db_init.py  test_dedupe.py  test_document_analysis_service.py  (+102 more)
(+122 files in other folders)
